fix: request #42252 Break long text in sections title/description
How to test:
- Click in the title of a section
- hit a key and do not release it
--> When the text reaches the right border of the editor, then the next
part of the text is displayed on the next line

- Same expectations in the description

- In the TOC, the text is no longer hidden behind the border of the
  viewport.

- In exported pdf, the content is wrapped properly

--- a/plugins/pdftemplate/include/PdfTemplate/Default/pdf-template-default.css
+++ b/plugins/pdftemplate/include/PdfTemplate/Default/pdf-template-default.css
@@ -124,6 +124,7 @@ h1.section-title {
 body {
     overflow: visible !important;
     margin: 0;
+    word-break: break-word
 }
 
 a:link, a:visited {
